--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+      src = "https://cdn.24.co.za/files/Cms/General/d/11118/66d73938ae9d411a84341ebca18cda54.jpg"
+      alt = "Toyota Model VXL"
+      title="The car infront of you is always a Toyota"
+      
+      />
   </body>
 </html>
